--- a/package.json
+++ b/package.json
@@ -18,7 +18,21 @@
   },
   "homepage": "https://github.com/felixcatto/eruption#readme",
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
     "del": "^5.1.0",
-    "gulp": "^4.0.2"
+    "file-loader": "^6.0.0",
+    "gulp": "^4.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "sass-loader": "^9.0.2",
+    "webpack": "^4.43.0",
+    "webpack-merge": "^5.0.9",
+    "webpack-nano": "^1.0.0",
+    "webpack-plugin-serve": "^1.0.1"
   }
 }
