--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "file-loader": "^6.0.0",
     "gulp": "^4.0.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "webpack": "^4.43.0",
     "webpack-merge": "^5.0.9",
     "webpack-nano": "^1.0.0",
     "webpack-plugin-serve": "^1.0.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.0"
   }
 }
