--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "formik": "^2.1.5",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   }
 }
