--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@reach/router": "^1.3.4",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "formik": "^2.1.5",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-dom": "^16.13.1"
   }
 }
