--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,6 +18,7 @@ settings:
 
 rules:
   function-paren-newline: 0
+  no-confusing-arrow: 0
   implicit-arrow-linebreak: 0
   object-curly-newline: 0
   operator-linebreak: 0
