--- a/package.json
+++ b/package.json
@@ -45,14 +45,17 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@reach/router": "^1.3.4",
+    "@reduxjs/toolkit": "^1.4.0",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "formik": "^2.1.5",
     "lodash": "^4.17.19",
+    "memoize-one": "^5.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   }
