--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@reatom/babel-plugin": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
@@ -45,6 +46,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@reach/router": "^1.3.4",
+    "@reatom/core": "^1.1.5",
+    "@reatom/debug": "^1.2.0",
+    "@reatom/react": "^1.1.4",
     "@reduxjs/toolkit": "^1.4.0",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
