--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -32,4 +32,10 @@ rules:
     - objects: only-multiline
       arrays: only-multiline
       functions: ignore
+  'no-param-reassign':
+    - error
+    - props: true
+      ignorePropertyModificationsFor:
+        - i
+        - state
   react/prop-types: 0
