--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "formik": "^2.1.5",
+    "immer": "^7.0.7",
     "lodash": "^4.17.19",
     "memoize-one": "^5.1.1",
     "react": "^16.13.1",
