--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@reduxjs/toolkit": "^1.4.0",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
+    "effector": "^21.0.3",
+    "effector-react": "^21.0.4",
     "formik": "^2.1.5",
     "immer": "^7.0.7",
     "lodash": "^4.17.19",
