--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "immer": "^7.0.7",
     "lodash": "^4.17.19",
     "memoize-one": "^5.1.1",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^2.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
