add express servar

--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "file-loader": "^6.0.0",
+    "forever-monitor": "^3.0.1",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "webpack": "^4.43.0",
-    "webpack-merge": "^5.0.9",
     "webpack-nano": "^1.0.0",
     "webpack-plugin-serve": "^1.0.1"
   },
@@ -54,12 +55,14 @@
     "classnames": "^2.2.6",
     "effector": "^21.0.3",
     "effector-react": "^21.0.4",
+    "express": "^4.17.1",
     "formik": "^2.1.5",
     "immer": "^7.0.7",
     "lodash": "^4.17.19",
     "memoize-one": "^5.1.1",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
+    "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
