--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reatom/babel-plugin": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-css-modules-transform": "^1.6.2",
     "css-loader": "^3.6.0",
     "del": "^5.1.0",
     "eslint": "^7.5.0",
@@ -34,11 +35,10 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "file-loader": "^6.0.0",
-    "forever-monitor": "^3.0.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "import-fresh": "^3.2.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
@@ -72,6 +72,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.26.10",
     "storeon": "^3.0.3"
   }
 }
