--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-css-modules-transform": "^1.6.2",
+    "blunt-livereload": "^0.1.0",
     "css-loader": "^3.6.0",
     "del": "^5.1.0",
     "eslint": "^7.5.0",
@@ -34,7 +35,6 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "file-loader": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -42,11 +42,9 @@
     "sass-loader": "^9.0.2",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-nano": "^1.0.0",
-    "webpack-plugin-serve": "^1.0.1"
+    "webpack-nano": "^1.0.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
     "@reach/router": "^1.3.4",
     "@reatom/core": "^1.1.5",
     "@reatom/debug": "^1.2.0",
